--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Brilliats – Facts That Matter</title>
+<meta name="description" content="Brilliats brings you latest fact videos with quick Hinglish summaries.">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<header>
+  <h1>🔥 Brilliats</h1>
+  <p>Facts • Knowledge • Reality</p>
+</header>
+
+<main id="videos"></main>
+
+<footer>
+  <p>© 2025 Brilliats | YouTube Facts Channel</p>
+</footer>
+
+<script src="script.js"></script>
+</body>
+</html>
 
